fix ai service